# con-con-models

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
ccmodels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ccmodels/analysis/: aggregators.py  description.txt  functions.py  simulators.py  utils.py
ccmodels/dataanalysis/: currents.py  dfs2numpy.py  filters.py  processedloader.py  statistics_extraction.py  utils.py
ccmodels/modelanalysis/: alessandro_extractstats.py  currents.py  functions.py  functions_new.py  inference.py  legacyfunctions.py  matrixsampler.jl  matrixsampler.py  matrixsampler_old.py  model.jl  model.py  sbi_utils.py  utils.py
ccmodels/plotting/: color_reference.py  description.txt  sbiplots.py  styles.py  utils.py
ccmodels/preprocessing/: connectomics.py  description.txt  downloader.py  downloader_new.py  process_functional.py  rawloader.py  region_classifier.py  selectivity.py  utils.py  utils_new.py
ccmodels/utils/: angleutils.py  watermark.py
data/: v1l234_neurons.pkl
data/data_old/: nonproof_inputs_l23sample.csv
data/in_processing/: dendritas_prepost.csv  inhibitory_nurons_ba.pkl  inhibitory_nurons_bal.pkl  orientation_fits.pkl
data/model/: fractions_populations.csv  k400_WORKING.pkl  kee.pkl  (+7 more)
data_old/: proofread_l234_inputs.csv
figure_scripts/: fig1.py  fig2.py  fig3.py
microns_phase3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: CAVEsetup.ipynb  inhibitory_BA_classifier.ipynb  test.ipynb
(+94 files in other folders)
